--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+aiosqlite==0.21.0
 dnspython==2.7.0
 fastapi==0.115.12
+greenlet==3.1.1
 SQLAlchemy==2.0.29
 uvicorn==0.34.0
 email_validator==2.2.0
